# benchzoo

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: asv.yml  benchmark-ips.yml  benchmark-js.yml  benchmarkdotnet.yml  benchmarktools-jl.yml  cargo-bench.yml  cassandra-stress.yml  catch2.yml  clickbench.yml  criterion.yml  ctest.yml  custom-csv.yml  custom-json.yml  cypress.yml  dotnet-test.yml  gatling.yml  go-test-bench.yml  google-benchmark.yml  hey.yml  hyperfine.yml  jmeter.yml  jmh.yml  junit-go.yml  junit-jest.yml  junit-vanilla.yml  k6.yml  lighthouse.yml  linetimer.yml  locust.yml  memtier.yml  mitata.yml  mocha.yml  perf-stat.yml  pgbench.yml  phpbench.yml  playwright.yml  pytest-benchmark.yml  redis-benchmark.yml  sysbench.yml  time.yml  (+6 more)
docs/: act.md  design.md  parser-targets.md  sample-benchmark.md  schema-v2.md  schema-v2.schema.json  workflow-conventions.md
frameworks/database/cassandra-stress/: README.md  run.sh
frameworks/database/clickbench/: README.md  load.sh  queries.sql  run.sh  schema.sql
frameworks/database/memtier/: README.md  run.sh
frameworks/database/pgbench/: README.md  benchmark1.sql  benchmark2.sql  benchmark3.sql  benchmark4.sql  run.sh
frameworks/database/redis-benchmark/: README.md  run.sh
frameworks/database/sysbench/: README.md  benchmark1.lua  benchmark2.lua  benchmark3.lua  benchmark4.lua  run.sh
frameworks/database/ycsb/: README.md  run.sh  workload.txt
frameworks/frontend/lighthouse/: README.md  run.sh
frameworks/generic/custom-csv/: README.md  emit.sh
frameworks/generic/custom-json/: README.md  emit.sh
frameworks/generic/hyperfine/: README.md  run.sh
frameworks/generic/perf-stat/: README.md  benchmark3.sh  run.sh
frameworks/generic/time/: README.md  benchmark1.sh  benchmark2.sh  benchmark4.sh  run.sh
frameworks/language/asv/: README.md  asv.conf.json  requirements.txt  run.sh
frameworks/language/benchmark-ips/: Gemfile  README.md  bench.rb  run.sh
frameworks/language/benchmark-js/: README.md  package.json  run.sh  sample-benchmark.js
frameworks/language/benchmarkdotnet/: Program.cs  README.md  SampleBenchmark.cs  SampleBenchmark.csproj  run.sh
frameworks/language/benchmarktools-jl/: Project.toml  README.md  bench.jl  run.sh
frameworks/language/cargo-bench/: Cargo.toml  README.md  run.sh  rust-toolchain.toml
frameworks/language/cargo-bench/benches/: sample_benchmark.rs
frameworks/language/catch2/: CMakeLists.txt  README.md  benchmarks.cc  run.sh
frameworks/language/criterion/: Cargo.toml  README.md  run.sh
frameworks/language/criterion/benches/: sample_benchmark.rs
frameworks/language/criterion/src/: lib.rs
frameworks/language/go-test-bench/: README.md  benchmarks_test.go  go.mod  run.sh
frameworks/language/google-benchmark/: CMakeLists.txt  README.md  benchmarks.cc  run.sh
frameworks/language/jmh/: README.md  pom.xml  run.sh
frameworks/language/linetimer/: README.md  bench.py  requirements.txt  run.sh
frameworks/language/mitata/: README.md  package.json  run.sh  sample-benchmark.js
frameworks/language/phpbench/: README.md  composer.json  phpbench.json  run.sh
frameworks/language/pytest-benchmark/: README.md  requirements.txt  test_sample_benchmark.py
frameworks/language/tinybench/: README.md  package.json  run.sh  sample-benchmark.js
frameworks/language/vitest-bench/: README.md  package.json  run.sh  sample-benchmark.bench.ts  vitest.config.ts
frameworks/loadtest/gatling/: README.md  index.html  nginx.conf  pom.xml  run.sh
frameworks/loadtest/hey/: README.md  index.html  nginx.conf  run.sh
frameworks/loadtest/jmeter/: README.md  index.html  nginx.conf  run.sh  test-plan.jmx
frameworks/loadtest/k6/: README.md  run.sh  sample-benchmark.js
frameworks/loadtest/locust/: README.md  index.html  locustfile.py  nginx.conf  run.sh
frameworks/loadtest/vegeta/: README.md  index.html  nginx.conf  run.sh
frameworks/loadtest/wrk/: README.md  index.html  run.sh
frameworks/loadtest/wrk2/: README.md  run.sh
frameworks/unit-or-qa/ctest/: CMakeLists.txt  README.md  run.sh
frameworks/unit-or-qa/cypress/: README.md  cypress.config.js  package.json  run.sh
frameworks/unit-or-qa/dotnet-test/: README.md  SampleTests.cs  SampleTests.csproj  run.sh
frameworks/unit-or-qa/junit-go/: README.md  go.mod  run.sh  sample_test.go
frameworks/unit-or-qa/junit-jest/: README.md  package.json  run.sh  sample.test.js
frameworks/unit-or-qa/junit-vanilla/: README.md  pom.xml  run.sh
frameworks/unit-or-qa/mocha/: README.md  package.json  run.sh
frameworks/unit-or-qa/playwright/: README.md  package.json  playwright.config.ts  run.sh
src/benchzoo/: __init__.py  parse.py  sniff.py
src/benchzoo/parsers/: __init__.py  _custom_json_common.py  _google_benchmark_common.py  _junit_common.py  _llm_prompt.py  asv.py  asv_text.py  benchmark_ips.py  benchmark_ips_text.py  benchmark_js.py  benchmarkdotnet_csv.py  benchmarkdotnet_json.py  benchmarkdotnet_text.py  hey.py  (+69 more)
tests/: test_discovery.py  test_schema_v2.py
tests/parsers/: test_asv_text.py  test_batch2.py  test_batch3.py  test_batch4.py  test_batch5.py  test_batch6.py  test_benchmark_ips_text.py  test_benchmarkdotnet.py  test_benchmarkdotnet_text.py  test_benchmarktools_jl_text.py  test_catch2_text.py  test_clickbench.py  test_criterion.py  test_ctest_text.py  test_custom_formats.py  test_database_parsers.py  test_go_bench.py  test_google_benchmark.py  test_hyperfine.py  test_hyperfine_text.py  test_jmeter_text.py  test_jmh.py  test_jmh_text.py  test_junit_go_text.py  test_junit_jest_text.py  test_junit_pytest.py  test_k6.py  test_lighthouse.py  test_linetimer.py  test_llm.py  test_locust_text.py  test_memtier_text.py  test_mitata_text.py  test_phpbench_text.py  test_pytest_benchmark.py  test_pytest_benchmark_text.py  test_redis_benchmark_text.py  test_time.py  test_vitest_bench_text.py
(+97 files in other folders)
