[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchzoo"
version = "0.0.0"
description = "Parsers that convert benchmark / unit-test framework output into the Nyrkiö JSON shape."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nyrkiö" },
]
keywords = ["benchmark", "performance", "parser", "nyrkio"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/nyrkio/benchzoo"
Source = "https://github.com/nyrkio/benchzoo"

[tool.hatch.build.targets.wheel]
packages = ["src/benchzoo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
